@@ -2136,7 +2136,7 @@ block|}
 block|}
 comment|/**      * Find words for a more-like-this query former.      *      * @param docNum the id of the lucene document from which to find terms      */
 DECL|method|retrieveTerms
-specifier|private
+specifier|public
 name|PriorityQueue
 name|retrieveTerms
 parameter_list|(
@@ -2668,6 +2668,115 @@ return|return
 name|createQueue
 argument_list|(
 name|words
+argument_list|)
+return|;
+block|}
+comment|/**    * @see #retrieveInterestingTerms(java.io.Reader)     */
+DECL|method|retrieveInterestingTerms
+specifier|public
+name|String
+index|[]
+name|retrieveInterestingTerms
+parameter_list|(
+name|int
+name|docNum
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|ArrayList
+name|al
+init|=
+operator|new
+name|ArrayList
+argument_list|(
+name|maxQueryTerms
+argument_list|)
+decl_stmt|;
+name|PriorityQueue
+name|pq
+init|=
+name|retrieveTerms
+argument_list|(
+name|docNum
+argument_list|)
+decl_stmt|;
+name|Object
+name|cur
+decl_stmt|;
+name|int
+name|lim
+init|=
+name|maxQueryTerms
+decl_stmt|;
+comment|// have to be careful, retrieveTerms returns all words but that's probably not useful to our caller...
+comment|// we just want to return the top words
+while|while
+condition|(
+operator|(
+operator|(
+name|cur
+operator|=
+name|pq
+operator|.
+name|pop
+argument_list|()
+operator|)
+operator|!=
+literal|null
+operator|)
+operator|&&
+name|lim
+operator|--
+operator|>
+literal|0
+condition|)
+block|{
+name|Object
+index|[]
+name|ar
+init|=
+operator|(
+name|Object
+index|[]
+operator|)
+name|cur
+decl_stmt|;
+name|al
+operator|.
+name|add
+argument_list|(
+name|ar
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+comment|// the 1st entry is the interesting word
+block|}
+name|String
+index|[]
+name|res
+init|=
+operator|new
+name|String
+index|[
+name|al
+operator|.
+name|size
+argument_list|()
+index|]
+decl_stmt|;
+return|return
+operator|(
+name|String
+index|[]
+operator|)
+name|al
+operator|.
+name|toArray
+argument_list|(
+name|res
 argument_list|)
 return|;
 block|}
